--- a/blog/templates/usuarios/login.html
+++ b/blog/templates/usuarios/login.html
@@ -8,10 +8,8 @@
 <div class='jumbotron'>
     <form method="post">
         {% csrf_token %}
-
-
         <br>
-        <center> {{ form.as_p }}<button type="submit" class="btn btn-success btn-lg">Registrar usuario</button></center>
+        <center> {{ form.as_p }}<button type="submit" class="btn btn-success btn-lg">Iniciar sesion</button></center>
     </form>
 </div>
 
