--- a/blog/templates/posts/post_detail.html
+++ b/blog/templates/posts/post_detail.html
@@ -5,25 +5,41 @@
 {% endblock titulo %}
 
 {% block contenido %}
-<img src="{{post.imagen.url}}" alt="nota" width="1200px">
+<center><img src="{{post.imagen.url}}" alt="nota"></center>
 <br>
 <h1>{{post.titulo}}</h1>
 <br>
 <h4>{{post.fecha_creacion}}</h4>
 <br>
 <p>{{post.cuerpo}}</p>
-
+<!-- Formulario de comentarios -->
+{% if user.is_authenticated %}
 <form action="{% url 'posts:comentar' %}" method="POST">
     {% csrf_token %}
-    <textarea name="comentario" id="" cols="30" rows="10"></textarea>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario:</label>
+        <textarea name="comentario" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
     <input type="text" name="id_post" value="{{ post.id }}" hidden="">
-    <input type="submit" value="comentar">
+    <button type="submit" class="btn btn-primary btn-lg">Comentar </button>
+
 </form>
-<div>
-    {%for comentario in post.comentarios_realizados%}
-    <p>{{ comentario.fecha_comentacion }}</p>
-    <p>{{ comentario.usuario }} comentó</p>
-    <p>{{ comentario.texto }}</p>
+{% endif %}
+<br>
+<!-- fin del form -->
+<div class="comentarios-container">
+    {% for comentario in post.comentarios_realizados %}
+    <div class="comentarios">
+        <p class="fecha">{{ comentario.fecha_comentacion }}</p>
+        <p class="usuario">{{ comentario.usuario }} comentó</p>
+        <p class="texto">{{ comentario.texto }}</p>
+        {% if user.is_authenticated and user.id == comentario.usuario_id or user.id == user.is_staff %}
+        <a class="btn btn-danger btn-lg" href="{% url 'posts:borrar_comentario' comentario.pk %}">
+            Borrar</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'posts:modificar_comentario' comentario.pk %}">
+            Modificar</a>
+        {% endif %}
+    </div>
     {% endfor %}
 </div>
 
