--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -29,3 +29,27 @@ img {
     color: slategrey;
     font-size: small;
 }
+
+
+/* Estilo para todos los campos de formulario */
+/* .login input,
+.login select,
+.login textarea {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+} */
+
+/* .registro input,
+.registro select,
+.registro textarea {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+} */
