--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -10,7 +10,9 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="{% url 'posts:home_posts' %}" class="nav-link px-2 text-secondary">Inicio</a></li>
                 <li><a href="{% url 'posts:post_realizado' %}" class="nav-link px-2 text-white">Posteos</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                {% if user.is_authenticated and user.is_staff %}
+                <li><a href="{% url 'admin:index' %}" class="nav-link px-2 text-white">Admin</a></li>
+                {% endif%}
                 <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">About</a></li>
             </ul>
