--- a/blog/templates/usuarios/login.html
+++ b/blog/templates/usuarios/login.html
@@ -5,11 +5,11 @@
 {% endblock titulo %}
 
 {% block contenido %}
-<div class='jumbotron'>
+<div class="login">
     <form method="post">
         {% csrf_token %}
         <br>
-        <center> {{ form.as_p }}<button type="submit" class="btn btn-success btn-lg">Iniciar sesion</button></center>
+        <center> {{ form.as_p }} <button type="submit" class="btn btn-success btn-lg">Iniciar sesion</button></center>
     </form>
 </div>
 
